--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "nprogress": "0.2.0",
     "openid-client": "5.4.0",
     "react": "18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.9",
     "swr": "2.1.2",
