--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@hookform/error-message": "2.0.1",
     "@hookform/resolvers": "3.0.1",
+    "@tanstack/react-query": "^5.32.0",
     "antd": "5.4.0",
     "dayjs": "1.11.7",
     "http-proxy": "1.18.1",
     "jotai": "2.0.3",
     "next": "13.3.0",
-    "next-auth": "4.22.0",
+    "next-auth": "^4.22.0",
     "nprogress": "0.2.0",
     "openid-client": "5.4.0",
     "react": "18.2.0",
