--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,4 @@ BACKEND_API_HOST=https://demo.duendesoftware.com
 OIDC_ISSUER=https://demo.duendesoftware.com
 OIDC_CLIENT_ID=interactive.public.short
 OIDC_SCOPE=openid profile email api offline_access
+BACKEND_NET_HOST=https://new-dev.accelist.com:1234
