--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@hookform/error-message": "2.0.1",
     "@hookform/resolvers": "3.0.1",
+    "@tanstack/react-query": "5.29.2",
     "antd": "5.4.0",
     "dayjs": "1.11.7",
     "http-proxy": "1.18.1",
