--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@hookform/error-message": "2.0.1",
     "@hookform/resolvers": "3.0.1",
     "antd": "5.4.0",
+    "axios": "^1.6.8",
     "dayjs": "1.11.7",
     "http-proxy": "1.18.1",
     "jotai": "2.0.3",
@@ -53,6 +54,7 @@
     "nprogress": "0.2.0",
     "openid-client": "5.4.0",
     "react": "18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.9",
     "swr": "2.1.2",
